# django_drf

./: .gitignore  pyproject.toml
drf_vue_blog/article/: models.py  permissions.py  serializers.py  urls.py  views.py
drf_vue_blog/article/migrations/: 0001_initial.py  0002_article_author.py
drf_vue_blog/drf_vue_blog/: settings.py  urls.py
drf_vue_blog/user_info/: serializers.py
