[project]
name = "django_drf_vue3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "coreJK", email = "corejk@163.com"},
]
dependencies = ["django==3.1.3", "djangorestframework==3.12.2", "markdown==3.3.3", "django-filter==2.4.0"]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
